2000-07-31  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: implement -cStringLength correctly in terms of
	other methods of the abstract class, rather than making the subclass
	do it.  Cache [-characterAtIndex:] implementation for speed
	throughout.
	* Source/Unicode.m: Remove uslen() function - unused and unsafe.
	Tidied code and optimised a little.
	* Source/Foundation/Unicode.h: Remove uslen()
	* Source/NSNumber.m: Check for nul argument to [-compare:]
	* Source/NSDate.m: ditto
	* Source/NSObject.m: ditto
	* Source/NSConcreteNumber.m: ditto
	* Source/NSTimer.m: ditto

2000-07-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/nconnection.m: Trivial test of basic inter-thread use of
	DO taken from example code in Applde documentation.

2000-07-29  Richard Frith-Macdonald <rfm@gnu.org>

	Varous cluster classes - Bugfix to let allocWithZone work for
	new concrete subclasses in the cluster.
	* Source/NSPortCoder.m: Accept classes when asked to decode object.
	* Source/NSUnarchiver.m: ditto.

2000-07-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSConnection.m: Don't create/use locks until the app
	goes multi-threaded.
	* Source/GSTcpPort.m: ditto.

2000-07-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTcpPort.m: Fix stupid error in last bugfix
	* Source/Foundation/GSConfig.h.in: define GS_SIZEOF_VOIDP
	* configure.in: provide GS_SIZEOF_VOIDP

2000-07-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSThread.m: clarify code for getting current thread.

2000-07-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Foundation/NSDebug.h: Bugfix reported by Frederic.De.Jaeger
	to prevent incorrect processor handling of cases where logging format
	string has no arguments.

2000-07-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTcpPort.m: When given bad data on a socket, log a message
	and invalidate the socket handle rather than raising an exception
	and crashing.  Should make system more robust in the face of attacks.
