@@ -77,7 +77,7 @@
  */
 
 #define main gnustep_base_user_main
-GS_IMPORT int gnustep_base_user_main (/* int argc, char *argv[] */);
+extern int gnustep_base_user_main (/* int argc, char *argv[] */);
 
 #endif	/* GS_FAKE_MAIN */
 
